@@ -13,6 +13,7 @@ Import-Package: com.openexchange.ajax.requesthandler,
  com.openexchange.documentation,
  com.openexchange.exception,
  com.openexchange.html,
+ com.openexchange.i18n,
  com.openexchange.java,
  com.openexchange.log,
  com.openexchange.osgi,
