@@ -2,6 +2,7 @@
 
  - Fix for bug 29232: Handle a meanwhile expunged message appropriately
  - Fix for bug 29233: Push read-write connection back into pool while signaling that it has been used for reading only
+ - Fix for bug 29230: Handle possible "ParsingFeedException" when reading RSS feed's XML content
 
 * 2013-10-10 - tobias.friedrich@open-xchange.com
 
